--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 fmcsaCensusAzureData.csv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+. filter=lfs diff=lfs merge=lfs -text
